syntax = "proto3";

option csharp_namespace = "gRPCSerwer";

package message;

service Messenger {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string message = 1;
}